--- a/web/package.json
+++ b/web/package.json
@@ -106,15 +106,15 @@
     "mime": "^4.1.0",
     "mitt": "^3.0.1",
     "negotiator": "^1.0.0",
-    "next": "~15.5.9",
+    "next": "~16.1.1",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "pinyin-pro": "^3.27.0",
     "qrcode.react": "^4.2.0",
     "qs": "^6.14.0",
-    "react": "19.2.3",
+    "react": "~19.2.3",
     "react-18-input-autosize": "^3.0.0",
-    "react-dom": "19.2.3",
+    "react-dom": "~19.2.3",
     "react-easy-crop": "^5.5.3",
     "react-hook-form": "^7.65.0",
     "react-hotkeys-hook": "^4.6.2",
@@ -154,9 +154,9 @@
     "@eslint-react/eslint-plugin": "^2.3.13",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
-    "@next/bundle-analyzer": "15.5.9",
-    "@next/eslint-plugin-next": "15.5.9",
-    "@next/mdx": "15.5.9",
+    "@next/bundle-analyzer": "~16.1.1",
+    "@next/eslint-plugin-next": "~16.1.1",
+    "@next/mdx": "~16.1.1",
     "@rgrove/parse-xml": "^4.2.0",
     "@storybook/addon-docs": "9.1.13",
     "@storybook/addon-links": "9.1.13",
@@ -189,6 +189,7 @@
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "bing-translate-api": "^4.1.0",
+    "babel-plugin-react-compiler": "^1.0.0",
     "code-inspector-plugin": "1.2.9",
     "cross-env": "^10.1.0",
     "eslint": "^9.39.2",
