feat: integrate Amplitude analytics into the application
- Added AmplitudeProvider component to initialize Amplitude analytics.
- Integrated Amplitude tracking in layout components and workflow log filter.
- Implemented user tracking in AppContextProvider to report user and workspace information to Amplitude.
- Added utility functions for tracking events and managing user properties.

--- a/web/package.json
+++ b/web/package.json
@@ -45,6 +45,7 @@
     "knip": "knip"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^2.31.3",
     "@emoji-mart/data": "^1.2.1",
     "@floating-ui/react": "^0.26.28",
     "@formatjs/intl-localematcher": "^0.5.10",
