--- a/web/package.json
+++ b/web/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.31.3",
+    "@amplitude/plugin-session-replay-browser": "^1.23.6",
     "@emoji-mart/data": "^1.2.1",
     "@floating-ui/react": "^0.26.28",
     "@formatjs/intl-localematcher": "^0.5.10",
