--- a/web/package.json
+++ b/web/package.json
@@ -105,6 +105,7 @@
     "next": "~15.5.6",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.8.1",
     "pinyin-pro": "^3.27.0",
     "qrcode.react": "^4.2.0",
     "qs": "^6.14.0",
