--- a/api/.env.example
+++ b/api/.env.example
@@ -525,6 +525,22 @@ WORKFLOW_LOG_CLEANUP_BATCH_SIZE=100
 APP_MAX_EXECUTION_TIME=1200
 APP_MAX_ACTIVE_REQUESTS=0
 
+# Aliyun SLS Logstore Configuration
+# Aliyun Access Key ID
+ALIYUN_SLS_ACCESS_KEY_ID=
+# Aliyun Access Key Secret
+ALIYUN_SLS_ACCESS_KEY_SECRET=
+# Aliyun SLS Endpoint (e.g., cn-hangzhou.log.aliyuncs.com)
+ALIYUN_SLS_ENDPOINT=
+# Aliyun SLS Region (e.g., cn-hangzhou)
+ALIYUN_SLS_REGION=
+# Aliyun SLS Project Name
+ALIYUN_SLS_PROJECT_NAME=
+# Time-To-Live (TTL) for logs in the Logstore, in days. Logs older than this will be deleted. (default: 30)
+ALIYUN_SLS_LOGSTORE_TTL=30
+# Enable dual-write to both SLS LogStore and SQL database (default: false)
+LOGSTORE_DUAL_WRITE_ENABLED=false
+
 # Celery beat configuration
 CELERY_BEAT_SCHEDULER_TIME=1
 
