refine code format

--- a/api/.env.example
+++ b/api/.env.example
@@ -552,7 +552,7 @@ ALIYUN_SLS_ENDPOINT=
 ALIYUN_SLS_REGION=
 # Aliyun SLS Project Name
 ALIYUN_SLS_PROJECT_NAME=
-# Time-To-Live (TTL) for logs in the Logstore, in days. Logs older than this will be deleted. (default: 30)
+# Number of days to retain workflow run logs (default: 30 days)
 ALIYUN_SLS_LOGSTORE_TTL=30
 # Enable dual-write to both SLS LogStore and SQL database (default: false)
 LOGSTORE_DUAL_WRITE_ENABLED=false
