support dual read to handle existing app migrating

--- a/api/.env.example
+++ b/api/.env.example
@@ -554,10 +554,13 @@ ALIYUN_SLS_ENDPOINT=
 ALIYUN_SLS_REGION=
 # Aliyun SLS Project Name
 ALIYUN_SLS_PROJECT_NAME=
-# Number of days to retain workflow run logs (default: 30 days)
-ALIYUN_SLS_LOGSTORE_TTL=30
+# Number of days to retain workflow run logs (default: 90 days， 3650 for permanent storage)
+ALIYUN_SLS_LOGSTORE_TTL=90
 # Enable dual-write to both SLS LogStore and SQL database (default: false)
 LOGSTORE_DUAL_WRITE_ENABLED=false
+# Enable dual-read fallback to SQL database when LogStore returns no results (default: true)
+# Useful for migration scenarios where historical data exists only in SQL database
+LOGSTORE_DUAL_READ_ENABLED=true
 
 # Celery beat configuration
 CELERY_BEAT_SCHEDULER_TIME=1
