--- a/docker/middleware.env.example
+++ b/docker/middleware.env.example
@@ -235,5 +235,10 @@ ALIYUN_SLS_ENDPOINT=
 ALIYUN_SLS_REGION=
 # Aliyun SLS Project Name
 ALIYUN_SLS_PROJECT_NAME=
+# Aliyun SLS Logstore TTL (default: 90)
+ALIYUN_SLS_LOGSTORE_TTL=90
 # Enable dual-write to both LogStore and SQL database (default: true)
 LOGSTORE_DUAL_WRITE_ENABLED=true
+# Enable dual-read fallback to SQL database when LogStore returns no results (default: true)
+# Useful for migration scenarios where historical data exists only in SQL database
+LOGSTORE_DUAL_READ_ENABLED=true
