--- a/docker/.env.example
+++ b/docker/.env.example
@@ -233,7 +233,7 @@ NEXT_PUBLIC_ENABLE_SINGLE_DOLLAR_LATEX=false
 
 # Database type, supported values are `postgresql` and `mysql`
 DB_TYPE=postgresql
-
+# For MySQL, only `root` user is supported for now
 DB_USERNAME=postgres
 DB_PASSWORD=difyai123456
 DB_HOST=db_postgres
@@ -1076,13 +1076,6 @@ MAX_TREE_DEPTH=50
 # ------------------------------
 # Environment Variables for database Service
 # ------------------------------
-
-# The name of the default postgres user.
-POSTGRES_USER=${DB_USERNAME}
-# The password for the default postgres user.
-POSTGRES_PASSWORD=${DB_PASSWORD}
-# The name of the default postgres database.
-POSTGRES_DB=${DB_DATABASE}
 # Postgres data directory
 PGDATA=/var/lib/postgresql/data/pgdata
 
