--- a/docker/middleware.env.example
+++ b/docker/middleware.env.example
@@ -4,6 +4,7 @@
 # Database Configuration
 # Database type, supported values are `postgresql` and `mysql`
 DB_TYPE=postgresql
+# For MySQL, only `root` user is supported for now
 DB_USERNAME=postgres
 DB_PASSWORD=difyai123456
 DB_HOST=db_postgres
@@ -11,11 +12,6 @@ DB_PORT=5432
 DB_DATABASE=dify
 
 # PostgreSQL Configuration
-POSTGRES_USER=${DB_USERNAME}
-# The password for the default postgres user.
-POSTGRES_PASSWORD=${DB_PASSWORD}
-# The name of the default postgres database.
-POSTGRES_DB=${DB_DATABASE}
 # postgres data directory
 PGDATA=/var/lib/postgresql/data/pgdata
 PGDATA_HOST_VOLUME=./volumes/db/data
