--- a/docker/docker-compose-template.yaml
+++ b/docker/docker-compose-template.yaml
@@ -161,7 +161,7 @@ services:
           "-h",
           "db_postgres",
           "-U",
-          "${PGUSER:-postgres}",
+          "${DB_USERNAME:-postgres}",
           "-d",
           "${DB_DATABASE:-dify}",
         ]
