--- a/web/package.json
+++ b/web/package.json
@@ -200,6 +200,7 @@
     "lint-staged": "^15.5.2",
     "lodash": "^4.17.21",
     "magicast": "^0.3.5",
+    "msw": "^2.12.4",
     "postcss": "^8.5.6",
     "react-scan": "^0.4.3",
     "sass": "^1.93.2",
