--- a/web/package.json
+++ b/web/package.json
@@ -201,6 +201,7 @@
     "lodash": "^4.17.21",
     "magicast": "^0.3.5",
     "msw": "^2.12.4",
+    "nock": "^14.0.10",
     "postcss": "^8.5.6",
     "react-scan": "^0.4.3",
     "sass": "^1.93.2",
