feat: add DISABLE_TELEMETRY to stop weaviate to collect metric

--- a/docker/middleware.env.example
+++ b/docker/middleware.env.example
@@ -124,6 +124,8 @@ WEAVIATE_AUTHENTICATION_APIKEY_USERS=hello@dify.ai
 WEAVIATE_AUTHORIZATION_ADMINLIST_ENABLED=true
 WEAVIATE_AUTHORIZATION_ADMINLIST_USERS=hello@dify.ai
 WEAVIATE_HOST_VOLUME=./volumes/weaviate
+# Disable Weaviate telemetry data collection to https://telemetry.weaviate.io/weaviate-telemetry
+DISABLE_TELEMETRY=true
 
 # ------------------------------
 # Docker Compose profile configuration
