--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1115,6 +1115,8 @@ WEAVIATE_AUTHENTICATION_APIKEY_ALLOWED_KEYS=WVF5YThaHlkYwhGUSmCRgsX3tD5ngdN8pkih
 WEAVIATE_AUTHENTICATION_APIKEY_USERS=hello@dify.ai
 WEAVIATE_AUTHORIZATION_ADMINLIST_ENABLED=true
 WEAVIATE_AUTHORIZATION_ADMINLIST_USERS=hello@dify.ai
+# Disable Weaviate telemetry data collection to https://telemetry.weaviate.io/weaviate-telemetry
+DISABLE_TELEMETRY=true
 
 # ------------------------------
 # Environment Variables for Chroma
