--- a/docker/docker-compose-template.yaml
+++ b/docker/docker-compose-template.yaml
@@ -425,6 +425,8 @@ services:
       AUTHENTICATION_APIKEY_USERS: ${WEAVIATE_AUTHENTICATION_APIKEY_USERS:-hello@dify.ai}
       AUTHORIZATION_ADMINLIST_ENABLED: ${WEAVIATE_AUTHORIZATION_ADMINLIST_ENABLED:-true}
       AUTHORIZATION_ADMINLIST_USERS: ${WEAVIATE_AUTHORIZATION_ADMINLIST_USERS:-hello@dify.ai}
+      # Disable Weaviate telemetry data collection to https://telemetry.weaviate.io/weaviate-telemetry
+      DISABLE_TELEMETRY: ${DISABLE_TELEMETRY:-true}
 
   # OceanBase vector database
   oceanbase:
