--- a/docker/docker-compose.middleware.yaml
+++ b/docker/docker-compose.middleware.yaml
@@ -238,6 +238,8 @@ services:
       AUTHENTICATION_APIKEY_USERS: ${WEAVIATE_AUTHENTICATION_APIKEY_USERS:-hello@dify.ai}
       AUTHORIZATION_ADMINLIST_ENABLED: ${WEAVIATE_AUTHORIZATION_ADMINLIST_ENABLED:-true}
       AUTHORIZATION_ADMINLIST_USERS: ${WEAVIATE_AUTHORIZATION_ADMINLIST_USERS:-hello@dify.ai}
+      # Disable Weaviate telemetry data collection to https://telemetry.weaviate.io/weaviate-telemetry
+      DISABLE_TELEMETRY: ${DISABLE_TELEMETRY:-true}
     ports:
       - "${EXPOSE_WEAVIATE_PORT:-8080}:8080"
       - "${EXPOSE_WEAVIATE_GRPC_PORT:-50051}:50051"
