--- a/api/.env.example
+++ b/api/.env.example
@@ -659,3 +659,4 @@ DATASET_MAX_SEGMENTS_PER_REQUEST=0
 SINGLE_CHUNK_ATTACHMENT_LIMIT=10
 ATTACHMENT_IMAGE_FILE_SIZE_LIMIT=2
 ATTACHMENT_IMAGE_DOWNLOAD_TIMEOUT=60
+IMAGE_FILE_BATCH_LIMIT=10
