--- a/docker/.env.example
+++ b/docker/.env.example
@@ -811,6 +811,9 @@ UPLOAD_FILE_EXTENSION_BLACKLIST=
 # Maximum number of files allowed in a single chunk attachment, default 10.
 SINGLE_CHUNK_ATTACHMENT_LIMIT=10
 
+# Maximum number of files allowed in a image batch upload operation
+IMAGE_FILE_BATCH_LIMIT=10
+
 # Maximum allowed image file size for attachments in megabytes, default 2.
 ATTACHMENT_IMAGE_FILE_SIZE_LIMIT=2
 
