--- a/docker/.env.example
+++ b/docker/.env.example
@@ -808,6 +808,19 @@ UPLOAD_FILE_BATCH_LIMIT=5
 # Recommended: exe,bat,cmd,com,scr,vbs,ps1,msi,dll
 UPLOAD_FILE_EXTENSION_BLACKLIST=
 
+# Maximum number of files allowed in a single chunk attachment, default 10.
+SINGLE_CHUNK_ATTACHMENT_LIMIT=10
+
+# Maximum number of files allowed in a image batch upload operation
+IMAGE_FILE_BATCH_LIMIT=10
+
+# Maximum allowed image file size for attachments in megabytes, default 2.
+ATTACHMENT_IMAGE_FILE_SIZE_LIMIT=2
+
+# Timeout for downloading image attachments in seconds, default 60.
+ATTACHMENT_IMAGE_DOWNLOAD_TIMEOUT=60
+
+
 # ETL type, support: `dify`, `Unstructured`
 # `dify` Dify's proprietary file extraction scheme
 # `Unstructured` Unstructured.io file extraction scheme
