--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,11 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "analyze-component": "node testing/analyze-component.js",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "preinstall": "npx only-allow pnpm",
@@ -158,6 +163,7 @@
     "@next/bundle-analyzer": "15.5.7",
     "@next/eslint-plugin-next": "15.5.7",
     "@next/mdx": "15.5.7",
+    "@playwright/test": "^1.56.1",
     "@rgrove/parse-xml": "^4.2.0",
     "@storybook/addon-docs": "9.1.13",
     "@storybook/addon-links": "9.1.13",
@@ -189,6 +195,7 @@
     "bing-translate-api": "^4.1.0",
     "code-inspector-plugin": "1.2.9",
     "cross-env": "^10.1.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.38.0",
     "eslint-plugin-oxlint": "^1.23.0",
     "eslint-plugin-react-hooks": "^5.2.0",
