chore: add placeholder for Amplitude API key in .env.example

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1433,5 +1433,5 @@ WORKFLOW_SCHEDULE_MAX_DISPATCH_PER_TICK=0
 # Tenant isolated task queue configuration
 TENANT_ISOLATED_TASK_CONCURRENCY=1
 
-# The api key of amplitude
+# The API key of amplitude
 AMPLITUDE_API_KEY=
