ci: explicitly include 'synchronize' for PR triggers to retrigger on pushes to PR branches

--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -1,7 +1,10 @@
 name: Main CI Pipeline
 
 on:
+  # Trigger on pull requests against `main`. Include `synchronize` explicitly
+  # to make it clear that pushing to a PR branch will retrigger the workflow.
   pull_request:
+    types: [opened, synchronize, reopened]
     branches: ["main"]
   push:
     branches: ["main"]
