--- a/web/package.json
+++ b/web/package.json
@@ -71,7 +71,7 @@
     "mermaid": "11.4.1",
     "mime": "^4.0.4",
     "negotiator": "^0.6.3",
-    "next": "^14.2.25",
+    "next": "14.2.35",
     "pinyin-pro": "^3.23.0",
     "qrcode.react": "^3.1.0",
     "qs": "^6.11.1",
@@ -154,7 +154,7 @@
     "code-inspector-plugin": "^0.18.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.36.0",
-    "eslint-config-next": "^14.0.4",
+    "eslint-config-next": "14.2.35",
     "eslint-plugin-storybook": "^0.9.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
