--- a/api/.env.example
+++ b/api/.env.example
@@ -78,8 +78,8 @@ REDIS_CLUSTERS_PASSWORD=
 # Example: redis://:difyai123456@redis:6379/1
 # If use Redis Sentinel, format as follows: `sentinel://<redis_username>:<redis_password>@<sentinel_host1>:<sentinel_port>/<redis_database>`
 # For high availability, you can configure multiple Sentinel nodes (if provided) separated by semicolons like below example:
-# Example: sentinel://:difyai123456@localhost:26379/1;sentinel://:difyai12345@localhost:26379/1;sentinel://:difyai12345@localhost:26379/1
-CELERY_BROKER_URL=redis://:difyai123456@localhost:${REDIS_PORT}/1
+# Example: sentinel://:difyai123456@localhost:26379/1;sentinel://:difyai123456@localhost:26379/1;sentinel://:difyai123456@localhost:26379/1
+CELERY_BROKER_URL="redis://:difyai123456@localhost:${REDIS_PORT}/1"
 CELERY_BACKEND=redis
 BROKER_USE_SSL=false
 
