chore: update autofix workflow to specify Python version and exclude certain directories from mdformat

--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -63,7 +63,7 @@ jobs:
 
       - name: mdformat
         run: |
-          uvx mdformat .
+          uvx --python 3.13 mdformat . --exclude ".claude/skills/**"
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
