--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -14,10 +14,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Use uv to ensure we have the same ruff version in CI and locally.
-      - uses: astral-sh/setup-uv@v6
+      # Setup Python first to avoid uv downloading python-build-standalone (may 504)
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
+      # Use uv to ensure we have the same ruff version in CI and locally.
+      - uses: astral-sh/setup-uv@v6
+
       - run: |
           cd api
           uv sync --dev
