--- a/web/package.json
+++ b/web/package.json
@@ -79,6 +79,7 @@
     "cmdk": "^1.1.1",
     "copy-to-clipboard": "^3.3.3",
     "cron-parser": "^5.4.0",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.19",
     "decimal.js": "^10.6.0",
     "dompurify": "^3.3.0",
