--- a/docker/docker-compose.middleware.yaml
+++ b/docker/docker-compose.middleware.yaml
@@ -217,7 +217,6 @@ services:
   weaviate:
     image: semitechnologies/weaviate:1.27.0
     profiles:
-      - ""
       - weaviate
     restart: always
     volumes:
@@ -242,6 +241,20 @@ services:
     ports:
       - "${EXPOSE_WEAVIATE_PORT:-8080}:8080"
       - "${EXPOSE_WEAVIATE_GRPC_PORT:-50051}:50051"
+
+  # MongoDB Atlas Local (simulates Atlas Vector Search)
+  mongodb:
+    image: mongodb/mongodb-atlas-local:latest
+    profiles:
+      - mongodb
+    restart: always
+    environment:
+      - MONGODB_INITDB_ROOT_USERNAME=${MONGODB_USERNAME:-root}
+      - MONGODB_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD:-difyai123456}
+    ports:
+      - "${EXPOSE_MONGODB_PORT:-27017}:27017"
+    volumes:
+      - ${MONGODB_HOST_VOLUME:-./volumes/mongodb/data}:/data/db
 
 networks:
   # create a network between sandbox, api and ssrf_proxy, and can not access outside.
