--- a/docker/middleware.env.example
+++ b/docker/middleware.env.example
@@ -127,6 +127,13 @@ WEAVIATE_DISABLE_TELEMETRY=false
 WEAVIATE_HOST_VOLUME=./volumes/weaviate
 
 # ------------------------------
+# Environment Variables for mongodb Service
+# ------------------------------
+MONGODB_HOST_VOLUME=./volumes/mongodb/data
+MONGODB_USERNAME=root
+MONGODB_PASSWORD=difyai123456
+
+# ------------------------------
 # Docker Compose profile configuration
 # ------------------------------
 # Loaded automatically when running `docker compose --env-file middleware.env ...`.
@@ -142,6 +149,7 @@ EXPOSE_REDIS_PORT=6379
 EXPOSE_SANDBOX_PORT=8194
 EXPOSE_SSRF_PROXY_PORT=3128
 EXPOSE_WEAVIATE_PORT=8080
+EXPOSE_MONGODB_PORT=27017
 
 # ------------------------------
 # Plugin Daemon Configuration
